--- a/index.html
+++ b/index.html
@@ -5,9 +5,169 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="12boolflex.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Esercizio per casa</h2> 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-2">col</div>
+                <div class="col-xs-5">col</div>
+                <div class="col-xs-5">col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">12 col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-8">8 col</div>
+                <div class="col-xs-2">2 col</div>
+                <div class="col-xs-2">2 col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-2">2 col</div>
+                <div class="col-xs-2">2 col</div>
+                <div class="col-xs-6">6 col</div>
+                <div class="col-xs-1">1 col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="row">
+                        <div class="col-xs-2 align">Nested 2 col</div>
+                        <div class="col-xs-2 align">Nested 2 col</div>
+                        <div class="col-xs-8 align">Nested 8 col</div>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="row">
+                        <div class="col-xs-6 align">Nested 6 col</div>
+                        <div class="col-xs-6 align">Nested 6 col</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12"></div>
+                <div class="col-xs-1"></div>
+                <div class="col-xs-11"></div>
+                <div class="col-xs-2"></div>
+                <div class="col-xs-10"></div>
+                <div class="col-xs-3"></div>
+                <div class="col-xs-9"></div>
+                <div class="col-xs-4"></div>
+                <div class="col-xs-8"></div>
+                <div class="col-xs-5"></div>
+                <div class="col-xs-7"></div>
+                <div class="col-xs-6"></div>
+                <div class="col-xs-6"></div>
+            </div>
+        </div>
+
+        <h2>Offset</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-1 col-xs-offset-11"></div>
+                <div class="col-xs-2 col-xs-offset-10"></div>
+                <div class="col-xs-3 col-xs-offset-9"></div>
+                <div class="col-xs-4 col-xs-offset-8"></div>
+                <div class="col-xs-5 col-xs-offset-7"></div>
+                <div class="col-xs-6 col-xs-offset-6"></div>
+                <div class="col-xs-7 col-xs-offset-5"></div>
+                <div class="col-xs-8 col-xs-offset-4"></div>
+                <div class="col-xs-9 col-xs-offset-3"></div>
+                <div class="col-xs-10 col-xs-offset-2"></div>
+                <div class="col-xs-11 col-xs-offset-1"></div>
+            </div>
+        </div>
+
+        <h2>Nested</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-7">
+                    <div class="row">
+                        <div class="col-xs-3"></div>
+                        <div class="col-xs-6"></div>
+                        <div class="col-xs-3"></div>
+                    </div>
+                </div>
+                <div class="col-xs-5">
+                    <div class="row">
+                        <div class="col-xs-6"></div>
+                        <div class="col-xs-6"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>alignment</h2>
+        <div class="container-fluid">
+            <div class="row left">
+                <div class="col-xs-6">start</div>
+            </div>
+            <div class="row center">
+                <div class="col-xs-6 ">center</div>
+            </div>
+            <div class="row right">
+                <div class="col-xs-6">right</div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row top">
+                <div class="col-xs-6 double"></div>
+                <div class="col-xs-6 normal">top</div>
+            </div>
+            <div class="row middle">
+                <div class="col-xs-6 double"></div>
+                <div class="col-xs-6 normal">middle</div>
+            </div>
+            <div class="row bottom">
+                <div class="col-xs-6 double"></div>
+                <div class="col-xs-6 normal">bottom</div>
+            </div>
+        </div>
+        <h1>jusify content</h1>
+        <h2>space aroud</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="row between">
+                        <div class="col-xs-2"></div>
+                        <div class="col-xs-2"></div>
+                        <div class="col-xs-2"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2>space beetween</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="row around">
+                        <div class="col-xs-2"></div>
+                        <div class="col-xs-2"></div>
+                        <div class="col-xs-2"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
